faeture: Update endpoints for resident